# fever-challenge

./: Makefile  README.md  fetch.py  pyproject.toml  pytest.ini  run.py
.github/workflows/: test.yml
migrations/versions/: 0b24db5d5e0a_.py  6c19a2c01525_.py  a0dd698ade55_.py
ops/docker/: Dockerfile-fetcher.local  Dockerfile.fetcher.local  Dockerfile.local  docker-compose.fetcher.yml  docker-compose.yml
ops/sql/: init.sql
src/api/: bootstrap.py
src/api/command/: events.py
src/api/config/: bootstrap.py  config.py
src/api/routes/: events.py
src/api/specs/: api_spec.yml
src/contexts/events/application/fetch/: service.py
src/contexts/events/application/parse_and_create/: command.py  service.py
src/contexts/events/application/search/: query.py  service.py
src/contexts/events/domain/: cache.py  event.py  event_repository.py  exception.py  provider.py  value_objects.py
src/contexts/events/infrastructure/bus/inmemory/: query.py
src/contexts/events/infrastructure/bus/rabittmq/: command.py
src/contexts/events/infrastructure/cache/: event_cache.py
src/contexts/events/infrastructure/persistence/: event_model.py  event_repository.py
src/contexts/events/infrastructure/providers/: challenge_provider.py  challenge_provider_pandas.py
src/contexts/events/presentation/: dto.py  error.py  search.py
src/shared/domain/: aggregate.py  value_objects.py  vo.py
src/shared/domain/bus/: event.py
src/shared/infrastructure/bus/inmemory/: query.py
src/shared/infrastructure/bus/rabittmq/: command.py
src/shared/infrastructure/cache/: redis.py
src/shared/infrastructure/persistence/: postgresql.py
src/shared/presentation/: controller.py  dto.py
src/workers/: command_worker.py  make_celery.py
tests/unit/contexts/events/infrastructure/: challenge_parser_test.py  challenge_provider_test.py
tests/unit/shared/domain/: date_range_vo_test.py
(+3 files in other folders)
