[tool.poetry]
name = "fever-challenge"
version = "0.1.0"
description = ""
authors = ["Julio Perdiguer <julio.perdiguer@zolar.de>"]
readme = "README.md"
packages = [{ include = "fever-challenge", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.3"}
pylint = "^3.3.1"
black = "^24.8.0"
aiohttp = "^3.10.6"
requests = "^2.32.3"
mypy = "^1.11.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
wiki = "events:fetch"